<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agregar"
            android:icon="@drawable/agregar"
            android:title="@string/menu_agregar" />
        <item
            android:id="@+id/nav_buscar"
            android:icon="@drawable/buscar"
            android:title="@string/menu_buscar" />
        <item
            android:id="@+id/nav_eliminar"
            android:icon="@drawable/eliminar"
            android:title="@string/menu_eliminar" />
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/inventario"
            android:title="@string/menu_inventario" />
    </group>

</menu>
